--- a/GroupChess/test_3js/overlay.css
+++ b/GroupChess/test_3js/overlay.css
@@ -14,10 +14,13 @@ body{
     background-color: rgba(255,0,0,.5); /*dim the background*/
 }
 h1 {
-    text-align:center;
-    color: white;
     position: absolute;
-    top: 50%;
+    left: 0;
+    top: 10%;
+    width: 100%;
+    text-align: center;
+    font-size: 50px;
+    color:white;
 }
 .game{
     position: absolute;
