--- a/GroupChess/test_3js/overlay.css
+++ b/GroupChess/test_3js/overlay.css
@@ -22,6 +22,25 @@ h1 {
     font-size: 50px;
     color:white;
 }
+input{
+    position:absolute;
+    top:50%;
+    left:2%;
+    text-align:left;
+    border: 2px green;
+    border-radius: 4px;
+    color:black;
+}
+.button{
+    position:absolute;
+    top:52%;
+    left:2%;
+    text-align:left;
+    border: 2px green;
+    border-radius: 4px;
+    color:black;
+}
+
 .game{
     position: absolute;
     top: 0;
